# rust-patterns-ddd

./: .env.sample  .gitignore  Cargo.toml  LICENSE  README.md  docker-compose.yml  rustfmt.toml
docker/: Dockerfile  init.sh
migrations/: 20201227051645_uuid-ossp.sql  20201227051649_users.sql
src/: error.rs  main.rs
src/application/services/domain/user/: dto.rs  service.rs
src/domain/user/: entity.rs  repository.rs
src/infrastructure/: database.rs  mod.rs
src/infrastructure/domain/user/: dto.rs  repository.rs
src/presentation/: mod.rs
src/presentation/http_server/: handler.rs  mod.rs  server.rs
src/presentation/http_server/middleware/: service.rs
