[package]
name = "rust-patterns-ddd"
version = "0.1.0"
authors = ["Esteban Borai <estebanborai@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async_once = "0.2"
async-trait = "0.1"
dotenv = "0.15"
env_logger = "0.8"
lazy_static = "1"
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.4", features = ["migrate", "postgres", "runtime-tokio-rustls", "uuid"] }
thiserror = "1"
tokio = { version = "0.2", features = ["full"] }
uuid = { version = "0.8", features = ["serde", "v4"] }
warp = "0.2"
